Changed defaults to match poetry defaults

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
-virtualenvs_inproject: true
-virtualenvs_prefer_active_python: true
+virtualenvs_inproject: false
+virtualenvs_prefer_active_python: false
 poetry_ohmyzsh_plugin: false
